# qtheme

./: .SRCINFO  .flake8  .gitignore  PKGBUILD  pyproject.toml  requirements.txt
.github/workflows/: check_sintax.yml  check_tag.yml  hello.yml  upload_pypi.yml
qtheme/: __main__.py  main.py
qtheme/cli/: kitty.py  menu.py  qtile.py
qtheme/utils/: colors.py  schemas.py
